# translation-pnp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md  build_all.sh
.github/: issue_template.md  pull_request_template.md
cmake/: MyLibConfig.cmake.in  TPnPConfig.cmake.in
example/: CMakeLists.txt  main.cpp  main.py
include/MyLib/: mylib.hpp
include/MyLib/utils/: a.hpp  b.hpp
include/TPnP/: pose.hpp
include/TPnP/utils/: euler.hpp  lla.hpp  math.hpp
src/: binding.cpp  mylib.cpp  pose.cpp
src/utils/: a.cpp  b.cpp  euler.cpp  lla.cpp  math.cpp
tests/: test_main.cpp
tests/MyLib/: test_mylib.cpp
tests/MyLib/utils/: test_a.cpp  test_b.cpp
tests/TPnP/: test_pose.cpp
tests/TPnP/utils/: test_euler.cpp  test_lla.cpp
